--- a/Task13/WebContent/WEB-INF/web.xml
+++ b/Task13/WebContent/WEB-INF/web.xml
@@ -1,152 +1,160 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>Task13</display-name>
-  <servlet>
-    <servlet-name>AddAdminController</servlet-name>
-    <servlet-class>controller.AddNewAdminController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AddAdminController</servlet-name>
-    <url-pattern>/add-admin</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>LoginAdminController</servlet-name>
-    <servlet-class>controller.LoginAdminController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>LoginAdminController</servlet-name>
-    <url-pattern>/login</url-pattern>
-  </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	id="WebApp_ID" version="3.0">
+	<display-name>Task13</display-name>
+	<session-config>
+		<cookie-config>
+			<http-only>true</http-only>
+		</cookie-config>
+	</session-config>
+	<servlet>
+		<servlet-name>AddAdminController</servlet-name>
+		<servlet-class>controller.AddNewAdminController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AddAdminController</servlet-name>
+		<url-pattern>/add-admin</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>LoginAdminController</servlet-name>
+		<servlet-class>controller.LoginAdminController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LoginAdminController</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
 
-  <servlet>
-    <servlet-name>AddNewsAdminController</servlet-name>
-    <servlet-class>controller.AddNewsAdminController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AddNewsAdminController</servlet-name>
-    <url-pattern>/admin/add-news</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>DeleteNewsAdminController</servlet-name>
-    <servlet-class>controller.DeleteNewsAdminController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>DeleteNewsAdminController</servlet-name>
-    <url-pattern>/admin/delete-news</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>DeleteCatAdminController</servlet-name>
-    <servlet-class>controller.DeleteCatAdminController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>DeleteCatAdminController</servlet-name>
-    <url-pattern>/admin/delete-cat</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>AddCatAdminController</servlet-name>
-    <servlet-class>controller.AddCatAdminController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AddCatAdminController</servlet-name>
-    <url-pattern>/admin/add-cat</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>EditCatAdminController</servlet-name>
-    <servlet-class>controller.EditCatAdminController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>EditCatAdminController</servlet-name>
-    <url-pattern>/admin/edit-cat</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>EditNewsAdminController</servlet-name>
-    <servlet-class>controller.EditNewsAdminController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>EditNewsAdminController</servlet-name>
-    <url-pattern>/admin/edit-news</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>FileUploadController</servlet-name>
-    <servlet-class>controller.FileUploadController</servlet-class>
-    <multipart-config>
-      <max-file-size>52428800</max-file-size>
-      <max-request-size>52428800</max-request-size>
-      <file-size-threshold>0</file-size-threshold>
-    </multipart-config>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>FileUploadController</servlet-name>
-    <url-pattern>/file-upload</url-pattern>
-  </servlet-mapping>
-  
-  <servlet>
-    <servlet-name>FileDownLoadController</servlet-name>
-	<servlet-class>controller.FileDownLoadController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>FileDownLoadController</servlet-name>
-    <url-pattern>/download</url-pattern>
-  </servlet-mapping>
-  
-  <servlet>
-    <servlet-name>SubmissionManager</servlet-name>
-	<servlet-class>controller.SubmissionAdminController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>SubmissionManager</servlet-name>
-    <url-pattern>/admin/submissions</url-pattern>
-  </servlet-mapping>
-  
-  <servlet>
-    <servlet-name>IndexAdminController</servlet-name>
-    <servlet-class>controller.IndexAdminController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>IndexAdminController</servlet-name>
-    <url-pattern>/admin/index</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>LogoutAdminController</servlet-name>
-    <servlet-class>controller.LogoutAdminController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>LogoutAdminController</servlet-name>
-    <url-pattern>/admin/logout</url-pattern>
-  </servlet-mapping>
-  <filter>
-    <filter-name>AuthenticationFilter</filter-name>
-    <filter-class>library.AuthenticationFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>AuthenticationFilter</filter-name>
-    <url-pattern>/admin/*</url-pattern>
-  </filter-mapping>
-  <servlet>
-    <servlet-name>IndexController</servlet-name>
-    <servlet-class>controller.IndexPublicController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>IndexController</servlet-name>
-    <url-pattern></url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>IndexController</servlet-name>
-    <url-pattern>/index</url-pattern>
-  </servlet-mapping>
-  
-  <servlet>
-    <servlet-name>PaperSubmissionController</servlet-name>
-    <servlet-class>controller.PaperSubmissionController</servlet-class>
-    <multipart-config>
-      <max-file-size>52428800</max-file-size>
-      <max-request-size>52428800</max-request-size>
-      <file-size-threshold>0</file-size-threshold>
-    </multipart-config>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>PaperSubmissionController</servlet-name>
-    <url-pattern>/submissions</url-pattern>
-  </servlet-mapping>
-  
+	<servlet>
+		<servlet-name>AddNewsAdminController</servlet-name>
+		<servlet-class>controller.AddNewsAdminController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AddNewsAdminController</servlet-name>
+		<url-pattern>/admin/add-news</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>DeleteNewsAdminController</servlet-name>
+		<servlet-class>controller.DeleteNewsAdminController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>DeleteNewsAdminController</servlet-name>
+		<url-pattern>/admin/delete-news</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>DeleteCatAdminController</servlet-name>
+		<servlet-class>controller.DeleteCatAdminController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>DeleteCatAdminController</servlet-name>
+		<url-pattern>/admin/delete-cat</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>AddCatAdminController</servlet-name>
+		<servlet-class>controller.AddCatAdminController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AddCatAdminController</servlet-name>
+		<url-pattern>/admin/add-cat</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>EditCatAdminController</servlet-name>
+		<servlet-class>controller.EditCatAdminController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>EditCatAdminController</servlet-name>
+		<url-pattern>/admin/edit-cat</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>EditNewsAdminController</servlet-name>
+		<servlet-class>controller.EditNewsAdminController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>EditNewsAdminController</servlet-name>
+		<url-pattern>/admin/edit-news</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>FileUploadController</servlet-name>
+		<servlet-class>controller.FileUploadController</servlet-class>
+		<multipart-config>
+			<max-file-size>52428800</max-file-size>
+			<max-request-size>52428800</max-request-size>
+			<file-size-threshold>0</file-size-threshold>
+		</multipart-config>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>FileUploadController</servlet-name>
+		<url-pattern>/file-upload</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>FileDownLoadController</servlet-name>
+		<servlet-class>controller.FileDownLoadController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>FileDownLoadController</servlet-name>
+		<url-pattern>/download</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>SubmissionManager</servlet-name>
+		<servlet-class>controller.SubmissionAdminController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SubmissionManager</servlet-name>
+		<url-pattern>/admin/submissions</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>IndexAdminController</servlet-name>
+		<servlet-class>controller.IndexAdminController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>IndexAdminController</servlet-name>
+		<url-pattern>/admin/index</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>LogoutAdminController</servlet-name>
+		<servlet-class>controller.LogoutAdminController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LogoutAdminController</servlet-name>
+		<url-pattern>/admin/logout</url-pattern>
+	</servlet-mapping>
+	<filter>
+		<filter-name>AuthenticationFilter</filter-name>
+		<filter-class>library.AuthenticationFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>AuthenticationFilter</filter-name>
+		<url-pattern>/admin/*</url-pattern>
+	</filter-mapping>
+	<servlet>
+		<servlet-name>IndexController</servlet-name>
+		<servlet-class>controller.IndexPublicController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>IndexController</servlet-name>
+		<url-pattern></url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>IndexController</servlet-name>
+		<url-pattern>/index</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>PaperSubmissionController</servlet-name>
+		<servlet-class>controller.PaperSubmissionController</servlet-class>
+		<multipart-config>
+			<max-file-size>52428800</max-file-size>
+			<max-request-size>52428800</max-request-size>
+			<file-size-threshold>0</file-size-threshold>
+		</multipart-config>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>PaperSubmissionController</servlet-name>
+		<url-pattern>/submissions</url-pattern>
+	</servlet-mapping>
+
 </web-app>
