--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Users\\tranl\\eclipse-workspace\\Jsp-ServletTutorial","type":"PROJECT","hints":{"PROJECT_NAME":"Jsp-ServletTutorial"}},"ABSENT"],[{"location":"C:\\Program Files\\Java\\jdk1.8.0_181","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"D:\\HippoTech-Internship\\server-tomcat\\lib\\servlet-api.jar","type":"JAR","hints":{}},"ABSENT"]]
+[[{"location":"C:\\Program Files\\Java\\jdk1.8.0_181","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
