--- a/Task13/.classpath
+++ b/Task13/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.44.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5"/>
 	<classpathentry exported="true" kind="lib" path="uploadFiles/gson-2.6.2.jar"/>
+	<classpathentry kind="lib" path="/Jsp-ServletTutorial/jjwt-0.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
