--- a/DACSNM_HEDIEUHANH/src/banker/input.properties
+++ b/DACSNM_HEDIEUHANH/src/banker/input.properties
@@ -1,22 +1,37 @@
-num-process= 5
-num-sources= 3
-available = 3 3 3
-#available-max
-p0 = 0 1 0-7 5 3
-p1 = 2 0 0-3 2 2
-p2 = 3 0 2-9 4 2
-p3 = 2 1 1-2 2 2
-p4 = 0 0 2-4 3 3
+#num-process= 10
+#num-sources= 6
+#available = 5 5 5 6 3 8
+##available-max
+#p0 =0 1 0 0 1 0-7 5 3 7 5 3
+#p1 =2 0 0 2 0 0-3 2 2 3 2 2
+#p2 =3 0 2 3 0 2-9 4 2 9 4 2
+#p3 =2 1 1 2 1 1-1 2 2 6 2 2
+#p4 =0 0 2 0 1 2-4 3 3 4 3 3
+#p5 =3 0 2 0 1 2-4 3 3 7 3 3
+#p6 =0 0 2 0 1 2-4 3 3 2 3 3
+#p7 =1 0 2 0 1 2-4 5 3 8 3 3
+#p8 =0 0 2 0 1 2-4 3 3 2 3 3
+#p9 =0 1 2 0 1 2-4 3 3 4 3 9
 
 #num-process= 5
 #num-sources= 3
-#available = 3 3 2
+#available = 3 3 3
 ##available-max
 #p0 = 0 1 0-7 5 3
 #p1 = 2 0 0-3 2 2
-#p2 = 3 0 2-9 0 2
+#p2 = 3 0 2-9 4 2
 #p3 = 2 1 1-2 2 2
 #p4 = 0 0 2-4 3 3
+
+num-process= 5
+num-sources= 3
+available = 3 3 2
+#available-max
+p0 = 0 1 0-7 5 3
+p1 = 2 0 0-3 2 2
+p2 = 3 0 2-9 0 2
+p3 = 2 1 1-2 2 2
+p4 = 0 0 2-4 3 3
 
 #num-process= 3
 #num-sources= 4
@@ -30,6 +45,6 @@ p4 = 0 0 2-4 3 3
 #num-sources= 4
 #available = 3 0 1 2
 ##available-max
-#p0 = 1 2 2 1-3 3 2 2
+#p0 = 1 2 2 1-3 3 2 4
 #p1 = 1 0 3 3-1 2 3 4
 #p2 = 1 2 2 0-1 3 5 0
