--- a/DACSNM_HEDIEUHANH/src/banker/input.properties
+++ b/DACSNM_HEDIEUHANH/src/banker/input.properties
@@ -13,15 +13,15 @@
 #p8 =0 0 2 0 1 2-4 3 3 2 3 3
 #p9 =0 1 2 0 1 2-4 3 3 4 3 9
 
-num-process= 5
-num-sources= 3
-available = 3 3 3
-available-max
-p0 = 0 1 0-7 5 3
-p1 = 2 0 0-3 2 2
-p2 = 3 0 2-9 4 2
-p3 = 2 1 1-2 2 2
-p4 = 0 0 2-4 3 3
+#num-process= 5
+#num-sources= 3
+#available = 3 3 3
+#available-max
+#p0 = 0 1 0-7 5 3
+#p1 = 2 0 0-3 2 2
+#p2 = 3 0 2-9 4 2
+#p3 = 2 1 1-2 2 2
+#p4 = 0 0 2-4 3 3
 
 #num-process= 5
 #num-sources= 3
@@ -33,13 +33,13 @@ p4 = 0 0 2-4 3 3
 #p3 = 2 1 1-2 2 2
 #p4 = 0 0 2-4 3 3
 
-#num-process= 3
-#num-sources= 4
-#available = 3 1 1 2
-##available-max
-#p0 = 1 2 2 1-3 3 2 2
-#p1 = 1 0 3 3-1 2 3 4
-#p2 = 1 2 1 0-1 3 5 0
+num-process= 3
+num-sources= 4
+available = 3 1 1 2
+#available-max
+p0 = 1 2 2 1-3 3 2 2
+p1 = 1 0 3 3-1 2 3 4
+p2 = 1 2 1 0-1 3 5 0
 
 #num-process= 3
 #num-sources= 4
