--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Program Files\\Java\\jre-10.0.2","type":"JRE","hints":{}},"jre:jre:1.10.0"]]
+[[{"location":"C:\\Program Files\\Java\\jre-10.0.2","type":"JRE","hints":{}},"jre:jre:1.10.0"],[{"location":"C:\\Users\\tranl\\eclipse-workspace\\DACSNM_MANG","type":"PROJECT","hints":{"PROJECT_NAME":"DACSNM_MANG"}},"ABSENT"]]
